Fixed video won't play on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body {
     background-color: black !important;
 }
 
+
+/* SECTION for video background */
+
 header {
     position: relative;
     background-color: black;
@@ -17,7 +20,7 @@ header {
     overflow: hidden;
 }
 
-.background-video {
+header video {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -46,21 +49,6 @@ header .overlay {
     background-color: black;
     opacity: 0.5;
     z-index: 1;
-}
-
-
-/* Media Query for devices withi coarse pointers and no hover functionality */
-
-
-/* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element */
-
-@media (pointer: coarse) and (hover: none) {
-    header {
-        background: url('videos/REVISION\ 11_Trim.mp4') black no-repeat center center scroll;
-    }
-    header video {
-        display: none;
-    }
 }
 
 
